[build-system]\nrequires = ["setuptools>=61.0"]\nbuild-backend = "setuptools.build_meta"\n\n[project]\nname = "livingpgp"\nversion = "0.1.0"\nauthors = [\n  { name="backbiten" },\n]\ndescription = "A new age PGP suite with sentient AI veto policies and quantum shielding."\nreadme = "README.md"\nrequires-python = ">=3.8"\nclassifiers = [\n    "Programming Language :: Python :: 3",\n    "License :: OSI Approved :: MIT License",\n    "Operating System :: OS Independent",\n]\n\n[project.urls]\n"Homepage" = "https://github.com/backbiten/livingpgp"\n"Bug Tracker" = "https://github.com/backbiten/livingpgp/issues"